--- a/src/main/resources/templates/html/dashboard/myPage-admin.html
+++ b/src/main/resources/templates/html/dashboard/myPage-admin.html
@@ -50,8 +50,8 @@
 
             </a>
             <div>
-                <a href="#"><button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn">MY PAGE</button></a>
-                <a href="#"><button class="btn mb-2 mr-2 btn-secondary" type="button" id="sign">SIGN IN</button></a>
+                <button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn">MY PAGE</button>
+                <button class="btn mb-2 mr-2 btn-secondary" type="button" id="sign-btn">SIGN IN</button>
             </div>
         </div>
     </nav>
@@ -107,7 +107,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="card card-body bg-white border-light mb-4">
-                                <h2 class="h5 mb-4">Suchedule</h2>
+                                <h2 class="h5 mb-4">Waiting For Approval</h2>
                                 <form>
                                     <table class="table">
                                         <thead>
@@ -119,33 +119,27 @@
                                             <th scope="col">승인 여부</th>
                                         </tr>
                                         </thead>
-                                        <tbody>
-                                        <c:forEach items="${}" var="dto" id="spare-tutor">
-                                            <tr>
-                                                <th scope="row" id="tno">
-                                                    <c:out value="${dto.tno}"/>
-                                                    1
-                                                </th>
-                                                <td id="tutor-name">
-                                                    <c:out value="${dto.dueDate}"/>
-                                                    튜터 이름
-                                                </td>
-                                                <td id="approval-date">
-                                                    <c:out value="${dto.dueDate}"/>
-                                                    날짜 시간
-                                                </td>
-                                                <td id="file">
-                                                    <c:out value="${dto.writer}"/>
-                                                    승인 파일
-                                                </td>
-                                                <td>
-                                                    <button type="submit" class="btn btn-primary"
-                                                            margin="15px" id="success">승인
-                                                    </button>
-                                                    <button type="submit" class="btn btn-danger" id="fail">거부</button>
-                                                </td>
-                                            </tr>
-                                        </c:forEach>
+                                        <tbody id="spare-tutor">
+<!--                                            <tr>-->
+<!--                                                <th scope="row"  >-->
+<!--                                                    <label id="tno" text="tno" ></label>-->
+<!--                                                </th>-->
+<!--                                                <td >-->
+<!--                                                    <span id="tutor-name" text="name"></span>-->
+<!--                                                </td>-->
+<!--                                                <td >-->
+<!--                                                    <span id="approval-date" text="dueDate"></span>-->
+<!--                                                </td>-->
+<!--                                                <td >-->
+<!--                                                    <a id="file" text="writer"></a>-->
+<!--                                                </td>-->
+<!--                                                <td>-->
+<!--                                                    <button type="submit" class="btn btn-primary"-->
+<!--                                                            margin="15px" id="success">승인-->
+<!--                                                    </button>-->
+<!--                                                    <button type="submit" class="btn btn-danger" id="fail">거부</button>-->
+<!--                                                </td>-->
+<!--                                            </tr>-->
                                         </tbody>
                                     </table>
                                 </form>
@@ -255,6 +249,75 @@
 
 <!-- Spaces custom Javascript -->
 <script src="/js/spaces.js"></script>
+<script type="text/javascript" th:inline="javascript">
+    $(document).ready(function() {
+        $.ajax({
+            type: "GET",
+            url: "/mypage/admin/get",
+            dataType:"json",
+            success: function(data, status) {
+                console.log(data);
+                console.log(status);
+                var tbody = $("#spare-tutor");
+                for(var i=0;i<data.length;i++) {
+                    var spare = data[i];
+                    var tr = $("<tr>");
+                    var tno = $("<th scope=\"row\">").text(i+1);
+                    var tutorName = $("<td>",{text:spare.tutorName});
+                    var approlDate = $("<td>",{text:spare.approlDate});
+                    var file = $("<td>",{text:spare.file});
+                    var success =$("<td><button type=\"submit\" class=\"btn btn-primary\" margin=\"15px\" id=\"success\">승인</button>");
+                    var fail =$("<td><button type=\"submit\" class=\"btn btn-danger\" id=\"fail\">거부</button>");
+
+                    tr.append(tno);
+                    tr.append(tutorName);
+                    tr.append(approlDate);
+                    tr.append(file);
+                    tr.append(success);
+                    tr.append(fail);
+                    tbody.append(tr);
+                }
+            },
+            error: function (data, textStatus) {
+                alert("Error!")
+            },
+            complete: function (data, textStatus) {
+            },
+        });
+    });
+</script>
+<!--<script>-->
+<!--    $('#file').on('click', function () {-->
+
+<!--        $.ajax({-->
+<!--            url: "/mypage/admin/get",-->
+<!--            method: "get",-->
+<!--            dataType: "json",-->
+<!--            success: function (result) {-->
+<!--                var jsonObject = JSON.parse(data);-->
+<!--                console.log(jsonObject.file);-->
+<!--                var filename = jsonObject.file;-->
+<!--                if (result == false) {-->
+<!--                    alert("파일이 존재하지 않습니다.");-->
+
+<!--                    return;-->
+<!--                }-->
+
+<!--                var downloadLink = document.createElement("a");-->
+<!--                downloadLink.href = '/download?filename=' + filename;-->
+<!--                downloadLink.download = "data.csv";-->
+
+<!--                document.body.appendChild(downloadLink);-->
+<!--                downloadLink.click();-->
+<!--                document.body.removeChild(downloadLink);-->
+<!--            },-->
+<!--            error: function (xhr, status, error) {-->
+<!--                alert(xhr.status + " : 서버와의 통신이 원활하지 않습니다. 다시 시도해 주십시오.");-->
+<!--            }-->
+<!--        });-->
+<!--    })-->
+<!--</script>-->
+
 </body>
 
 </html>
