myPage-tutors_Information : 스크립트 분리

--- a/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
@@ -395,23 +395,25 @@
             },
         });
     });
-
+</script>
+<script>
     $("#withdrawal-btn").click(function (){
         $.ajax({
             type: "DELETE",
             url: "/mypage/{tutor_id}/delete",
             success: function(data, status) {
-                var jsonObject = JSON.parse(data);
+            var jsonObject = JSON.parse(data);
 
             },
             error: function (data, textStatus) {
-                alert("Error!")
+            alert("Error!")
             },
             complete: function (data, textStatus) {
             },
         });
     });
 </script>
+
 </body>
 
 </html>
