--- a/src/main/resources/templates/html/main-search.html
+++ b/src/main/resources/templates/html/main-search.html
@@ -87,21 +87,21 @@
                             <h1 class="h2 mb-4" style="color: black;">Find Your Tutor</h1>
                             <div class="card p-md-2 mb-3">
                                 <div class="card-body p-2 p-md-0">
-                                    <form autocomplete="off" class="row justify-content-between" method="get"
-                                        action="./all-spaces.html">
+                                    <form autocomplete="off" class="row justify-content-between" method="get" id="search-form"
+                                        action="/main/search-all/search">
                                         <div class="col-12 col-lg-4 pr-lg-1">
                                             <div class="form-group form-group-lg mb-lg-0">
                                                 <div class="input-group">
                                                     <input id="search-name" type="text"
                                                         class="form-control autocomplete" placeholder="튜터의 이름을 입력해주세요"
-                                                        required>
+                                                        name="name" >
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-12 col-lg-4 pr-lg-1">
                                             <div class="form-group form-group-lg mb-lg-0">
                                                 <div class="input-group">
-                                                    <select class="form-control" id="search-interest" required>
+                                                    <select class="form-control" id="search-interest" name="interest">
                                                         <option value="" disabled selected style="display:none">관심사
                                                         </option>
                                                         <option value="politics">정치</option>
@@ -120,7 +120,7 @@
                                                             class="far fa-calendar-alt"></span></span>
                                                 </div>
                                                 <input class="form-control datepicker" id="reservate-date" placeholder="예약 날짜" type="text"
-                                                    required>
+                                                    name="date">
                                             </div>
                                         </div>
                                         <div class="col-12 col-lg-1 pl-lg-1">
@@ -203,7 +203,7 @@
         </div>
     </footer>
 
-    <script src="/js/main-search.js"></script>
+    <script src="/js/main.js"></script>
     <script src="/js/move.js"></script>
 
     <!-- Core -->
