비밀번호 변경 페이지 : 유효성 검사, POST 방식으로 제출, Controller에서 값 들어오는 것까지 확인

--- a/src/main/resources/templates/html/password-change.html
+++ b/src/main/resources/templates/html/password-change.html
@@ -54,7 +54,7 @@
           <div class="col-12 d-flex align-items-center justify-content-center">
             <div
               class="signin-inner mt-3 mt-lg-0 bg-white shadow-soft border rounded border-light p-4 p-lg-5 w-100 fmxw-500">
-              <form action="/members/signup/tutors" method="post" id="signInForm">
+              <form id="changePasswordForm">
                 <div class="form-group">
                   <!-- Form -->
                   <div class="form-group">
@@ -83,7 +83,7 @@
                           </span>
                         </span>
                       </div>
-                      <input class="form-control" id="password-confirm" placeholder="Confirm password" type="password"
+                      <input class="form-control" id="password_confirm" placeholder="Confirm password" type="password"
                         aria-label="Password" required />
                     </div>
                   </div>
@@ -101,6 +101,9 @@
 
   <!-- Validation -->
   <script src="/js/validate-tutor.js"></script>
+
+  <!-- Validation -->
+  <script src="/js/password-change.js"></script>
 
   <!-- Core -->
   <script src="/vendor/jquery/dist/jquery.min.js"></script>
