popup.js 평가 팝업 기능 추가

--- a/src/main/resources/templates/html/evaluate-popup.html
+++ b/src/main/resources/templates/html/evaluate-popup.html
@@ -62,7 +62,8 @@
     <link type="text/css" href="/css/spaces.css" rel="stylesheet">
 
     <!-- NOTICE: You can use the _analytics.html partial to include production code specific code & trackers -->
-
+    <script src="https://code.jquery.com/jquery-3.6.4.js"
+            integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -107,6 +108,8 @@
         </div>
     </div>
 </main>
+
+<script src="/js/popup.js"></script>
 
 <!-- Core -->
 <script src="/vendor/jquery/dist/jquery.min.js"></script>
