--- a/src/main/resources/templates/html/password-find.html
+++ b/src/main/resources/templates/html/password-find.html
@@ -64,7 +64,7 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><span class="fas fa-envelope"></span></span>
                     </div>
-                    <input class="form-control" id="email" placeholder="@E-mail" type="text" aria-label="email adress"
+                    <input class="form-control" id="email" placeholder="@E-mail" type="text" aria-label="email adress" autocomplete="off"
                       required />
                   </div>
                 </div>
@@ -77,7 +77,7 @@
                   <div class="d-block d-sm-flex justify-content-center align-items-center mt-4">
                     <span class="font-weight-normal">
                       Go back to the
-                      <a href="sign-in.html" class="font-weight-bold">login page</a>
+                      <a href="/members/signin" class="font-weight-bold">login page</a>
                     </span>
                   </div>
                 </div>
