password-find js파일 분리

--- a/src/main/resources/templates/html/password-find.html
+++ b/src/main/resources/templates/html/password-find.html
@@ -92,6 +92,9 @@
   <!-- Validation -->
   <script src="/js/validate-tutor.js"></script>
 
+  <!-- ajax -->
+  <script src="/js/password-find.js"></script>
+
   <!-- Core -->
   <script src="/vendor/jquery/dist/jquery.min.js"></script>
   <script src="/vendor/popper.js/dist/umd/popper.min.js"></script>
