--- a/src/main/resources/templates/html/dashboard/myPage-tutees_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutees_Information.html
@@ -334,6 +334,29 @@
 <!-- Spaces custom Javascript -->
 <script src="/js/spaces.js"></script>
 
+<!-- Ajax get data -->
+<script>
+    $(document).ready(function() {
+        $.ajax({
+            type: "GET",
+            url: "/mypage/{tutor_id}/get",
+            success: function(data, status) {
+                var jsonObject = JSON.parse(data);
+
+                $("#tutee-name").text(jsonObject.name);
+                $("#name").val(jsonObject.name);
+                $("#email").val(jsonObject.email);
+                $("#first-interest").val(jsonObject.interest1).prop("selected",true);
+                $("#second-interest").val(jsonObject.interest2).prop("selected",true);
+            },
+            error: function (data, textStatus) {
+                alert("Error!")
+            },
+            complete: function (data, textStatus) {
+            },
+        });
+    });
+</script>
 </body>
 
 </html>
