--- a/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
+++ b/src/main/resources/templates/html/dashboard/myPage-tutors_Information.html
@@ -52,7 +52,7 @@
             </a>
             <div>
                 <button class="btn mb-2 mr-2 btn-white" type="button" id="mypage-btn">MY PAGE</button>
-                <button class="btn mb-2 mr-2 btn-secondary" type="button" id="sign-btn">SIGN IN</button>
+                <button class="btn mb-2 mr-2 btn-secondary" type="button" id="sign-btn">SIGN OUT</button>
             </div>
         </div>
     </nav>
@@ -77,11 +77,11 @@
                             </div>
                             <h2 class="h5 font-weight-normal text-center mt-3 mb-0" id="tutor-name">Neil Sims</h2>
                             <div class="list-group dashboard-menu list-group-sm mt-4">
-                                <a href="./myPage-tutors.html"
+                                <a href="./{user_id}" id="information"
                                    class="d-flex list-group-item list-group-item-action  active">Information<span
                                         class="icon icon-xs ml-auto"><span
                                         class="fas fa-chevron-right"></span></span> </a>
-                                <a href="myPage-tutors_Schedule.html"
+                                <a href="./{user_id}/schedule" id="schedule"
                                    class="d-flex list-group-item list-group-item-action ">Schedule<span
                                         class="icon icon-xs ml-auto"><span
                                         class="fas fa-chevron-right"></span></span> </a>
@@ -324,6 +324,7 @@
 </footer>
 
 <script src="/js/validate-tutor.js"></script>
+<script src="/js/mypage-tutor.js"></script>
 
 <!-- Core -->
 <script src="/vendor/jquery/dist/jquery.min.js"></script>
